; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_sbgdec.c_parse_synth_channel_pink.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_sbgdec.c_parse_synth_channel_pink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbg_parser = type { i32 }
%struct.sbg_script_synth = type { i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"pink\00", align 1
@SBG_TYPE_NOISE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sbg_parser*, %struct.sbg_script_synth*)* @parse_synth_channel_pink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_synth_channel_pink(%struct.sbg_parser* %0, %struct.sbg_script_synth* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sbg_parser*, align 8
  %5 = alloca %struct.sbg_script_synth*, align 8
  %6 = alloca i32, align 4
  store %struct.sbg_parser* %0, %struct.sbg_parser** %4, align 8
  store %struct.sbg_script_synth* %1, %struct.sbg_script_synth** %5, align 8
  %7 = load %struct.sbg_parser*, %struct.sbg_parser** %4, align 8
  %8 = call i32 @lex_fixed(%struct.sbg_parser* %7, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %21

11:                                               ; preds = %2
  %12 = load %struct.sbg_parser*, %struct.sbg_parser** %4, align 8
  %13 = call i32 @parse_volume(%struct.sbg_parser* %12, i32* %6)
  %14 = call i32 @FORWARD_ERROR(i32 %13)
  %15 = load i32, i32* @SBG_TYPE_NOISE, align 4
  %16 = load %struct.sbg_script_synth*, %struct.sbg_script_synth** %5, align 8
  %17 = getelementptr inbounds %struct.sbg_script_synth, %struct.sbg_script_synth* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load %struct.sbg_script_synth*, %struct.sbg_script_synth** %5, align 8
  %20 = getelementptr inbounds %struct.sbg_script_synth, %struct.sbg_script_synth* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  store i32 1, i32* %3, align 4
  br label %21

21:                                               ; preds = %11, %10
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @lex_fixed(%struct.sbg_parser*, i8*, i32) #1

declare dso_local i32 @FORWARD_ERROR(i32) #1

declare dso_local i32 @parse_volume(%struct.sbg_parser*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
